--- a/Objects/myProject.build_log.htm
+++ b/Objects/myProject.build_log.htm
@@ -28,8 +28,12 @@ Project File Date:  10/17/2023
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 assembling startup_MKL25Z4.s...
-compiling rtx_lib.c...
 compiling RTX_Config.c...
+compiling rtx_lib.c...
+compiling main.c...
+colorHandler.h(7): warning:  #1-D: last line of file ends without a newline
+  void startFastFlashRed(void);
+main.c: 1 warning, 0 errors
 compiling system_MKL25Z4.c...
 compiling colorHandler.c...
 colorHandler.h(7): warning:  #1-D: last line of file ends without a newline
@@ -37,18 +41,9 @@ colorHandler.h(7): warning:  #1-D: last line of file ends without a newline
 colorHandler.c(87): warning:  #1-D: last line of file ends without a newline
   }
 colorHandler.c: 2 warnings, 0 errors
-compiling main.c...
-colorHandler.h(7): warning:  #1-D: last line of file ends without a newline
-  void startFastFlashRed(void);
-main.c(119): warning:  #223-D: function "initPWM" declared implicitly
-  	initPWM();
-main.c: 2 warnings, 0 errors
 linking...
-.\Objects\myProject.axf: Error: L6218E: Undefined symbol initPWM (referred from main.o).
-Not enough information to list image symbols.
-Not enough information to list load addresses in the image map.
-Finished: 2 information, 0 warning and 1 error messages.
-".\Objects\myProject.axf" - 1 Error(s), 4 Warning(s).
+Program Size: Code=6508 RO-data=496 RW-data=5136 ZI-data=264  
+".\Objects\myProject.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -83,27 +78,26 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:Keil RTX5:Library:5.5.1
-      Source file:   CMSIS\RTOS2\RTX\Template\Mutex.c
-      Source file:   CMSIS\RTOS2\RTX\Template\Timer.c
-      Source file:   CMSIS\RTOS2\RTX\Template\Thread.c
-      Source file:   CMSIS\RTOS2\RTX\Template\MemPool.c
       Include file:  CMSIS\RTOS2\RTX\Include\rtx_os.h
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_lib.c
-      Source file:   CMSIS\RTOS2\RTX\Template\MsgQueue.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Timer.c
       Source file:   CMSIS\RTOS2\RTX\Template\svc_user.c
-      Source file:   CMSIS\RTOS2\RTX\Template\main.c
-      Source file:   CMSIS\RTOS2\RTX\Template\Events.c
-      Source file:   CMSIS\RTOS2\RTX\Template\Semaphore.c
-      Library file:  CMSIS\RTOS2\RTX\Library\ARM\RTX_CM0.lib
+      Source file:   CMSIS\RTOS2\RTX\Template\Mutex.c
       Source file:   CMSIS\RTOS2\RTX\Config\RTX_Config.c
+      Source file:   CMSIS\RTOS2\RTX\Template\MemPool.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Thread.c
       Include file:  CMSIS\RTOS2\RTX\Config\RTX_Config.h
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_lib.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Semaphore.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Events.c
+      Library file:  CMSIS\RTOS2\RTX\Library\ARM\RTX_CM0.lib
+      Source file:   CMSIS\RTOS2\RTX\Template\main.c
+      Source file:   CMSIS\RTOS2\RTX\Template\MsgQueue.c
 
    * Component: Keil::Device:Startup:2.5.0
-      Source file:   Device\Source\ARM\startup_MKL25Z4.s
-      Source file:   Device\Source\system_MKL25Z4.c
       Include file:  Device\Source\system_MKL25Z4.h
-Target not created.
-Build Time Elapsed:  00:00:01
+      Source file:   Device\Source\system_MKL25Z4.c
+      Source file:   Device\Source\ARM\startup_MKL25Z4.s
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
