--- a/Objects/myProject.build_log.htm
+++ b/Objects/myProject.build_log.htm
@@ -28,22 +28,18 @@ Project File Date:  10/26/2023
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 assembling startup_MKL25Z4.s...
-compiling rtx_lib.c...
-compiling RTX_Config.c...
 compiling colorHandler.c...
+compiling RTX_Config.c...
+compiling rtx_lib.c...
 compiling buzzer.c...
-compiling system_MKL25Z4.c...
 compiling motor_handler.c...
+compiling system_MKL25Z4.c...
+compiling serial.c...
 compiling pwm.c...
 compiling main.c...
-main.c(127): warning:  #1-D: last line of file ends without a newline
-  }
-main.c(58): warning:  #177-D: function "delay"  was declared but never referenced
-  static void delay(volatile uint32_t nof) {
-main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=8960 RO-data=532 RW-data=5140 ZI-data=260  
-".\Objects\myProject.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=8552 RO-data=532 RW-data=5144 ZI-data=264  
+".\Objects\myProject.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -78,26 +74,26 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:Keil RTX5:Library:5.5.1
-      Source file:   CMSIS\RTOS2\RTX\Template\main.c
-      Library file:  CMSIS\RTOS2\RTX\Library\ARM\RTX_CM0.lib
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_lib.c
-      Source file:   CMSIS\RTOS2\RTX\Template\svc_user.c
-      Source file:   CMSIS\RTOS2\RTX\Config\RTX_Config.c
+      Include file:  CMSIS\RTOS2\RTX\Config\RTX_Config.h
       Include file:  CMSIS\RTOS2\RTX\Include\rtx_os.h
-      Source file:   CMSIS\RTOS2\RTX\Template\Thread.c
       Source file:   CMSIS\RTOS2\RTX\Template\Semaphore.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Thread.c
       Source file:   CMSIS\RTOS2\RTX\Template\MsgQueue.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Timer.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Events.c
+      Source file:   CMSIS\RTOS2\RTX\Template\svc_user.c
+      Library file:  CMSIS\RTOS2\RTX\Library\ARM\RTX_CM0.lib
       Source file:   CMSIS\RTOS2\RTX\Template\MemPool.c
       Source file:   CMSIS\RTOS2\RTX\Template\Mutex.c
-      Source file:   CMSIS\RTOS2\RTX\Template\Events.c
-      Include file:  CMSIS\RTOS2\RTX\Config\RTX_Config.h
-      Source file:   CMSIS\RTOS2\RTX\Template\Timer.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_lib.c
+      Source file:   CMSIS\RTOS2\RTX\Config\RTX_Config.c
+      Source file:   CMSIS\RTOS2\RTX\Template\main.c
 
    * Component: Keil::Device:Startup:2.5.0
       Source file:   Device\Source\ARM\startup_MKL25Z4.s
-      Source file:   Device\Source\system_MKL25Z4.c
       Include file:  Device\Source\system_MKL25Z4.h
-Build Time Elapsed:  00:00:00
+      Source file:   Device\Source\system_MKL25Z4.c
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
